# SlicerSurfaceLearner

./: .gitignore  CMakeLists.txt  README.md
PlaneCNN/: CMakeLists.txt  PlaneCNN.py
PlaneCNN/InferenceLib/: CONSTANTS.py
PlaneCNN/InferenceLib/data_utils/: GeomCnnDataset.py  utils.py
PlaneCNN/PlaneCNNUtil/: __init__.py
PlaneCNNTrainer/: CMakeLists.txt  PlaneCNNTrainer.py  README.md
PlaneCNNTrainer/DeepLearnerLib/: CONSTANTS.py
PlaneCNNTrainer/DeepLearnerLib/data_utils/: GeomCnnDataset.py  utils.py
PlaneCNNTrainer/DeepLearnerLib/models/: cnn_model.py
PlaneCNNTrainer/DeepLearnerLib/pl_modules/: classifier_modules.py
PlaneCNNTrainer/DeepLearnerLib/prediction/: predict.py
PlaneCNNTrainer/DeepLearnerLib/training/: EfficientNetTrainer.py
PlaneCNNTrainer/PlaneCNNTrainerUtil/: CheckableComboBox.py  __init__.py
SurfacePlaneMapper/: CMakeLists.txt  SurfacePlaneMapper.py
SurfacePlaneMapper/geometry_image/tools/: perform_sgim_sampling.py  run.py  vtk_tools.py
